# watchlist-backend

./: .dockerignore  .env_test  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  deny.toml  docker-compose-full.yaml  docker-compose.yaml
.github/: pull_request_template.md
.github/workflows/: ci.yml
chart/: Chart.yaml
chart/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml
chart/templates/tests/: test-connection.yaml
src/: main.rs
src/api/: error.rs  extractors.rs  mod.rs  server.rs  version.rs
src/api/handlers/: auth_handlers.rs  healthz_handlers.rs  mod.rs  movie_handlers.rs  user_handlers.rs
src/api/routes/: auth_routes.rs  mod.rs  movie_routes.rs  user_routes.rs
src/application/: app.rs  config.rs  constants.rs  mod.rs  state.rs
src/application/repository/: mod.rs  movie_repo.rs  user_repo.rs
src/application/security/: auth.rs  jwt.rs  mod.rs  roles.rs
src/application/service/: token_service.rs
src/domain/models/: healthz.rs  mod.rs  movie.rs  user.rs
src/infrastructure/database/: database.rs  mod.rs
src/infrastructure/database/postgres/: mod.rs  options.rs  postgres.rs
src/infrastructure/redis/: mod.rs
