[package]
name = "watchlist-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15"
axum = { version = "0.8" }
axum-macros = { version = "0.5.0" }
axum-extra = { version = "0.10", features = ["typed-header"] }
tokio = { version = "1.44", features = ["full"] }
bytes = "1.10"
tower-http = { version = "0.6", features = ["cors"] }
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
http-body-util = { version = "0.1" }
hyper = { version = "1.6", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.16", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
    "serde",
] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"

redis = { version = "0.29", features = ["tokio-comp"] }
sqlx = { version = "0.8.3", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "macros",
    "chrono",
] }

jsonwebtoken = { version = "9.3" }
bcrypt = "0.17"
